Update function create on Controller DetailPenjualanController
